update to base 5.3.1